--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,10 @@ RECORD_TIME=60s
 # the maximum number of attempts to reconnect the bot to the room if the connection fails, the default number of attempts is 5
 MAX_ATTEMPTS=5
 
-
 #AWS credentials
 aws_access_key=""
 aws_secret_access_key=""
 
 #AWSInfo
-#REGION=""
-#BUCKET_NAME=""
+REGION=""
+BUCKET_NAME=""
